--- a/frontend/src/components/chat.css
+++ b/frontend/src/components/chat.css
@@ -40,7 +40,7 @@
 .msg-box {
     padding: 10px;
     margin: 10px 0;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .model {
@@ -53,4 +53,11 @@
     position: absolute;
     top: 5;
     left: 5;
+    cursor: pointer;
+    border: 1px solid lightgrey;
+    padding: 5px 7px;
+    font-size: 12px;
+    border-radius: 5px;
+    box-shadow: 1px 1px #888888;
+    background: var(--background-secondary);
 }
