--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,3 +16,7 @@ body, html {
 App {
     height: 100%;
 }
+
+code {
+    text-wrap: wrap;
+}
